<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/home_bg"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"></LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:padding="20dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/diabetes_check_btn"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    android:onClick="diabetesCheckClick"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/diabetes_check"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/bmi_btn"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:backgroundTint="@color/white"
                    android:onClick="bmiClick"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/bmi_diet_plan"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"

                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout1"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <androidx.cardview.widget.CardView

                    android:id="@+id/insulin_btn"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:backgroundTint="@color/white"
                    android:onClick="insulinBtn"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/insulin_injections"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"

                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/medicine_alerts_btn"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:backgroundTint="@color/white"
                    android:onClick="medicineAlertsClick"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/medicine_alerts"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"

                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout2"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/pharmacy_near_btn"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    android:onClick="pharmacyListClick"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/pharmacy_near_me"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"

                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/faq_btn"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    android:onClick="faqClick"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/faq_s"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"

                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>









